--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,21 @@
 	 text-align:center; 
 	 color:white;
 }
+.scroll_down:before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: scroll_down_btn-animation 2s infinite;
+  animation: scroll_down_btn-animation 2s infinite;
+  box-sizing: border-box;
+}
+
 .card-deck{
 	padding: 1em;
 }
