--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,21 @@
 	 text-align:center; 
 	 color:white;
 }
-
+button.scroll_down {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  height: 50px;
+  width: 30px;
+  bottom: 60px;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+  outline: none;
+}
 button.scroll_down:before {
   position: absolute;
   top: 10px;
