--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ button.scroll_down {
   height: 50px;
   width: 30px;
   bottom: 60px;
-  background-color: transparent;
+  background-color: #FAEBD7;
   border: 2px solid white;
   border-radius: 20px;
   cursor: pointer;
